[gd_scene load_steps=2 format=3 uid="uid://btltsdn5t8r1d"]

[ext_resource type="Script" path="res://Game/Scripts/menuA.gd" id="1_3hvci"]

[node name="menuA" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 13.0
offset_right = -6.0
offset_bottom = 13.0
script = ExtResource("1_3hvci")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2i(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.0
offset_top = 103.0
offset_right = -213.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1, 0.5)

[node name="Button_restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 31.0
text = "Restart"

[node name="Button_view score board" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 200.0
offset_bottom = 66.0
text = "Score Board"

[node name="Button_quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 70.0
offset_right = 200.0
offset_bottom = 101.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Button_restart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_view score board" to="." method="_on_button_view_score_board_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_quit" to="." method="_on_button_quit_pressed"]
